Form Spacing Fix

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -7,7 +7,7 @@
 .form__label {
   display: block;
   padding-bottom: 8px;
-  padding-top: 16px;
+  padding-top: 32px;
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
@@ -19,7 +19,6 @@
   width: 385px;
   height: 60px;
   border-radius: 4px;
-  margin-bottom: 32px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -41,6 +40,7 @@
   border-radius: 4px;
   cursor: pointer;
   transition: opacity 0.5s ease;
+  margin-top: 32px;
   margin-bottom: 32px;
   font-family: Inter;
   font-style: normal;
